test: add change password tests
