# api/swagger/user.swagger.yaml
@@ -227,8 +227,8 @@ paths:
       produces:
       - application/json
       responses:
-        "204":
-          description: No Content
+        "201":
+          description: Created
         "400":
           description: Bad Request
           schema:
@@ -259,8 +259,8 @@ paths:
       produces:
       - application/json
       responses:
-        "204":
-          description: No Content
+        "201":
+          description: Created
         "400":
           description: Bad Request
           schema:
@@ -344,7 +344,7 @@ paths:
       summary: Verify email
       tags:
       - auth
-  /user/{id}/change-password:
+  /user/me/change-password:
     patch:
       consumes:
       - application/json
@@ -364,8 +364,8 @@ paths:
       produces:
       - application/json
       responses:
-        "204":
-          description: No Content
+        "201":
+          description: Accepted
         "400":
           description: Invalid arguments
           schema:
